--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,35 +28,4 @@ jobs:
 
       - name: Run unit tests
         run: |
-          pytest
-
-  sonarcloud_analysis:
-    runs-on: ubuntu-latest
-    needs: test_and_build
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up SonarQube scanner
-        uses: sonarsource/sonarcloud-github-action@v2
-
-      - name: SonarQube Analysis
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          sonar-scanner \
-            -Dsonar.projectKey=tp2devops \
-            -Dsonar.organization=your-sonar-organization \
-            -Dsonar.host.url=https://sonarcloud.io \
-            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: sonarcloud_analysis
-    steps:
-      - name: Deploy to Azure Web App
-        uses: azure/webapps-deploy@v2
-        with:
-          app-name: 'your-azure-webapp-name'
-          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: .
+          python -m pytest  # Updated this line to run pytest
